# radfoam

./: .gitignore  CMakeLists.txt  ERROR_SAMPLING_PROPOSAL.md  ERROR_SAMPLING_README.md  ERROR_SAMPLING_USAGE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  downscale_dataset.py  error_aware_data_handler.py  error_sampling.py  justfile  prepare_colmap_data.py  print_stats.py  test-depth.sh  test_error_sampling.sh  train.py  viewer.py
configs/: __init__.py  classroom.yaml  db.yaml  mipnerf360_indoor.yaml  mipnerf360_outdoor.yaml  synth.yaml
data_loader/: __init__.py  colmap.py
radfoam_model/: scene.py
rapport/: compare_losses.py  crop_test_images.py  stats.py
src/: CMakeLists.txt
src/tracing/: pipeline.cu  pipeline.h
src/viewer/: viewer.cpp  viewer.h
torch_bindings/: CMakeLists.txt  pipeline_bindings.cpp
